--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -21,6 +21,14 @@
 .footer p {
   font-weight: 500;
   font-size: 1.5rem;
+  text-align: left;
+  color: white;
+}
+
+.footer h4 {
+  font-weight: 500;
+  font-size: 1.8rem;
+  text-align: left;
   color: white;
 }
 .footer a {
@@ -30,7 +38,7 @@
   width: 70%;
 }
 .footer_info {
-  padding: 20px 0;
+  padding: 20px 350px;
   background-color: #121930;
 }
 .Register_a {
@@ -94,4 +102,13 @@
   a {
     color: #43b7be;
   }
+}
+
+
+.row {
+  margin: -2px;
+}
+
+.row > .col {
+  padding: 0px;
 }
