--- a/src/components/Prizes/style.scss
+++ b/src/components/Prizes/style.scss
@@ -4,7 +4,7 @@
     width: 32rem;
     width: fit-content;
     margin: 0 auto;
-    text-align: left;
+    text-align: justify;
     margin-top: 1.7rem;
 }
 .PrizeHeading h1{
@@ -17,6 +17,7 @@
 
 .Prizes p{
     color: rgb(145, 143, 143);
+    font-size: 1.5rem;
 }
 .Prizes .first{
     color:#A239EA;
